@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Degrees {
        - Final : int
        - Reg : String
        - Seventh : int
        - SubName : String
        - Ten : int
        - Twelfth : int
        + Degrees()
        + Degrees()
        + getFinal()
        + getReg()
        + getSeventh()
        + getSubName()
        + getTen()
        + getTwelfth()
        + setFinal()
        + setReg()
        + setSeventh()
        + setSubName()
        + setTen()
        + setTwelfth()
    }
  }
  

  namespace sample {
    class sample.Lecturer {
        + GetID()
        + GetName()
        + GetNameOfSub()
        + Lecturer()
        + Lecturer()
    }
  }
  

  namespace sample {
    class sample.LecturerSubject {
        - students : ArrayList<Student>
        + GetName()
        + LecturerSubject()
        + LecturerSubject()
        + LecturerSubject()
        + LecturerSubject()
        + setStudents()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  namespace sample {
    class sample.Person {
        # Id : String
        # Name : String
        + GetID()
        + GetName()
        + Person()
        + Person()
    }
  }
  

  namespace sample {
    class sample.Student {
        - SS : List<StudentSubject>
        + AddSubject()
        + GetID()
        + GetName()
        + Student()
        + Student()
        + getSS()
    }
  }
  

  namespace sample {
    class sample.StudentSubject {
        - Reg : String
        + StudentSubject()
        + StudentSubject()
        + StudentSubject()
        + StudentSubject()
        + getReg()
        + setReg()
    }
  }
  

  namespace sample {
    class sample.Subject {
        # Code : String
        # CreditHours : int
        # Name : String
        # Semester : int
        + GetName()
        + Subject()
        + Subject()
        + Subject()
        + Subject()
        + getCode()
        + getCreditHours()
        + getName()
        + getSemester()
        + setCode()
        + setCreditHours()
        + setName()
        + setSemester()
    }
  }
  

  sample.Lecturer -up-|> sample.Person
  sample.Lecturer o-- sample.LecturerSubject : Sub
  sample.LecturerSubject -up-|> sample.Subject
  sample.Student -up-|> sample.Person
  sample.StudentSubject -up-|> sample.Subject
  sample.StudentSubject o-- sample.Degrees : D


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
